--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "leancloud-storage": "^3.4.1",
     "node-sass": "^4.6.1",
     "normalize.css": "^7.0.0",
+    "object-path": "^0.11.4",
     "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
+    "vue-i18n": "^5.0.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
