--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-log
+/test/unit/coverage/
+
 # Editor directories and files
 .idea
 .vscode
@@ -11,3 +12,4 @@ log
 *.ntvs*
 *.njsproj
 *.sln
+
